# zc.recipe.testrunner

./: .coveragerc  .editorconfig  .gitignore  .meta.cfg  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.md  MANIFEST.in  README.rst  README.txt  buildout.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pre-commit.yml  tests.yml
src/zc/recipe/testrunner/: README.rst  README.txt  __init__.py  bugfixes.txt  tests.py
